--- a/icuiwd/index.html
+++ b/icuiwd/index.html
@@ -34,11 +34,11 @@
   
 
  
- <!-- What is happening here is rather than creating a separaye css file and linking it to html, we are just enveloping the style.css into html directly. It is a handy method for convience-->
+ <!-- What is happening here is rather than creating a separate CSS file and linking it to HTML, we are just enveloping the style.css into html directly. It is a handy method for convience-->
 
 
   <q style="font-style: oblique; color: brown;">
-    The only way to learn a new programming langauage is writing programs in it.
+    The only way to learn a new programming language is by writing programs in it.
   </q>
   
     <style>
